<resources>
    <string name="app_name">Vendas</string>

    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="nome">Nome</string>
    <string name="age">Idade</string>
    <string name="man">Homem</string>
    <string name="woman">Mulher</string>
    <string name="other">Outro</string>
    <string name="save">Salvar</string>
    <string name="home_hello">Olá, %s</string>
    <string name="home_new_transaction">Nova compra</string>
    <string name="home_new_account">Criar conta</string>
    <string name="home_bank_balance">R$ 0,00</string>
    <string name="home_balance_available">Saldo disponivel</string>
    <string name="home_next_invoice">Próxima fatura</string>
    <string name="chama_pra_registro">Novo por aqui? Registrar</string>
    <string name="clear_inputs">Limpar campos</string>
    <string name="name_account">Nome da conta</string>
    <string name="account_value">Valor da conta</string>
    <string name="account_responsible">Responsavel da conta</string>
    <string name="debit">Debito</string>
    <string name="credit">Credito</string>
    <string name="value">Valor</string>
    <string name="icon">Icon</string>
    <string name="description">Descrição</string>
    <string name="data_transações">Data da transação</string>
    <string name="home_new_transacoes">Nova Transação</string>
    <string name="add_saldo">Adicionar saldo</string>
    <string name="remover_saldo">Retirar saldo</string>
    <string name="valor">Value</string>
    <string name="commerce">Comercio a receber</string>
    <string name="market">Mercado</string>
    <string name="gas_station">Posto de Gasolina</string>
    <string name="pub">Bar</string>
    <string name="save_transaction">Salvar transação</string>
</resources>