<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".balance.data.local.TransactionActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/description"
            app:layout_constraintBottom_toTopOf="@id/ti_value">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/transactionRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ti_value">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/market" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gas_station" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pub" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_transaction"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/transactionRB"
            app:layout_constraintEnd_toEndOf="@id/transactionRB" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>