<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        tools:context=".account.AccountActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionIT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/valueIT"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_account"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueIT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/responsibleIT"
            app:layout_constraintTop_toBottomOf="@+id/descriptionIT">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/valueET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_value"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/responsibleIT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/accountRB"
            app:layout_constraintTop_toBottomOf="@+id/valueIT">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/responsibleET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_responsible"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/accountRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/responsibleIT">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/debit" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/credit" />
        </RadioGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/confirm_floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_baseline_check_24"
            app:backgroundTint="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>